<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh" />

    <item android:title="@string/sort_by">
        <menu app:showAsAction="always">
            <item
                android:id="@+id/sort_name"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:title="@string/name"
                app:actionViewClass="com.google.android.material.button.MaterialButtonToggleGroup" />
            <item
                android:id="@+id/sort_rarity"
                android:icon="@android:drawable/ic_menu_sort_by_size"
                android:title="@string/rarity"
                app:actionViewClass="com.google.android.material.button.MaterialButtonToggleGroup" />
        </menu>
    </item>

    <item android:title="@string/filter">
        <menu app:showAsAction="always">
            <item
                android:id="@+id/sort_Reset"
                android:title="@string/reset" />
            <item
                android:id="@+id/sort_Legendary"
                android:title="@string/legendary" />
            <item
                android:id="@+id/sort_Chromatic"
                android:title="@string/chromatic" />
            <item
                android:id="@+id/sort_Mythic"
                android:title="@string/mythic" />
            <item
                android:id="@+id/sort_Epic"
                android:title="@string/epic" />
            <item
                android:id="@+id/sort_Super"
                android:title="@string/super_rare" />
            <item
                android:id="@+id/sort_Rare"
                android:title="@string/rare" />
            <item
                android:id="@+id/sort_Trophie"
                android:title="@string/starting_brawler" />
        </menu>
    </item>


</menu>